--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,14 @@
-body, html {
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+$bgcolor: #fff;
+$fgcolor: rgba(0,0,0,0.6);
+$accent: #4285F4;
+body,
+html {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: "Open Sans", sans-serif;
 }
 
 #map {
@@ -10,9 +16,46 @@ body, html {
     height: 100%;
 }
 
-#menu {
+.sidePanel {
     position: absolute;
-    top: 5%;
+    top: 10%;
     left: 5%;
+    width: 300px;
+    height: 80%;
     padding: 1em;
+    background: $bgcolor;
+    border-radius: 1em;
+    select {
+        font-size: 12pt;
+        padding: 0.25em;
+        border-radius: 0.25em;
+    }
+    #locationList {
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+    }
+}
+
+.btn {
+    display: block;
+    width: 80%;
+    margin: 0.5em auto;
+    padding: 0.5em;
+    color: $accent;
+    border: 1px solid $accent;
+    border-radius: 0.5em;
+    background-color: transparent;
+    cursor: pointer;
+    &:hover {
+        color: $bgcolor;
+        background-color: $accent;
+    }
+}
+
+.btnClose {
+    float: right;
+    width: auto;
 }
