Toggle showing the panels.

--- a/src/style.scss
+++ b/src/style.scss
@@ -19,12 +19,13 @@ html {
 .sidePanel {
     position: absolute;
     top: 10%;
-    left: 5%;
+    left: 10px;
+    bottom: 90px;
     width: 300px;
-    height: 80%;
     padding: 1em;
     background: $bgcolor;
     border-radius: 1em;
+    overflow: auto;
     select {
         font-size: 12pt;
         padding: 0.25em;
@@ -36,6 +37,13 @@ html {
             margin: 0;
             padding: 0;
         }
+    }
+    footer {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        padding: 1em;
+        font-size: 0.8em;
     }
 }
 
@@ -58,4 +66,12 @@ html {
 .btnClose {
     float: right;
     width: auto;
+}
+
+.btnMenu {
+    position: absolute;
+    left: 10px;
+    bottom: 20px;
+    width: auto;
+    background-color: $bgcolor;
 }
