--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,10 @@ html {
     font-family: "Open Sans", sans-serif;
 }
 
+#app {
+    display: none;
+}
+
 #map {
     width: 100%;
     height: 100%;
